Fixed overflow of codes

--- a/mkdocs_jinks/jinks_en/css/theme.css
+++ b/mkdocs_jinks/jinks_en/css/theme.css
@@ -281,6 +281,7 @@ header {
 }
 .content .code {
 	margin: 5px 0;
+	overflow: auto;
 }
 .content code {
 	margin: 3px 5px;
